--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main_header{
+    background: -webkit-linear-gradient(30deg,#5f9af9,#f11a07);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
